# whiteboard-bbb-integration

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
deploy/: .gitignore  cloud-init-native.yml  main.tf  terraform.tfvars.example  variables.tf
src/: config.py  database.py  main.py
src/app/: logging.py  middleware.py
src/app/api/exceptions/: __init__.py  handlers.py
src/app/api/routers/: __init__.py  bbb.py  meeting.py  user.py  whiteboard.py  widget.py
src/app/data/models/: __init__.py  meeting.py  stats_module.py  user.py  widget.py
src/app/data/repositories/: __init__.py  base.py  meeting.py  stats_module.py  user.py  widget.py
src/app/data/types/: __init__.py  base.py
src/app/dependencies/: __init__.py  auth.py  service_factories.py
src/app/domain/entities/: __init__.py  base.py  bbb.py  meeting.py  query.py  user.py  widget.py
src/app/domain/enums/: __init__.py  bbb.py  user.py
src/app/domain/exceptions/: __init__.py  bbb.py  exceptions.py
src/app/domain/services/: __init__.py  bbb.py  meeting.py  statistics.py  user.py  widget.py
src/app/shared/: exceptions.py
src/migrations/: env.py
src/migrations/versions/: 2025_12_09_062d3abbc8c6.py  2026_01_12_748fba95760e.py  2026_01_14_bfbe75364c08.py  2026_01_21_518c10f5f174.py
src/scripts/: drop_db.py  get_stats.py  set_hooks.py  set_moderator.py
